FILE( GLOB test_sources "*.c" )
FOREACH( test_source ${test_sources} )
  GET_FILENAME_COMPONENT( test_name ${test_source} NAME_WE )
  GET_FILENAME_COMPONENT( test_type ${test_source} EXT )
  SET( test_target_name "test.${test_name}" )
  ADD_EXECUTABLE( "${test_target_name}" ${test_source} )
  TARGET_LINK_LIBRARIES( "${test_target_name}" nilsimsa-lite )
  ADD_TEST( NAME ${test_name} COMMAND "${test_target_name}" )
ENDFOREACH()
